--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "axios": "^1.12.1",
+    "chart.js": "^4.5.0",
     "next": "15.5.3",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
     "zod": "^4.1.8"
   },
