--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:accessibility": "node scripts/accessibility-audit.js",
-    "test:contrast": "node scripts/run-contrast-audit.js"
+    "test:contrast": "node scripts/run-contrast-audit.js",
+    "test:a11y:home": "cross-env A11Y_PATH=/ node scripts/a11y-playwright.js",
+    "test:a11y:manager": "cross-env A11Y_PATH=/requests node scripts/a11y-playwright.js",
+    "test:a11y:admin": "cross-env A11Y_PATH=/edit-users node scripts/a11y-playwright.js",
+    "test:a11y:rtl:new-request": "cross-env RUN_A11Y=true jest --runInBand src/app/new-request/__tests__/",
+    "test:a11y:rtl:requests": "cross-env RUN_A11Y=true jest --runInBand src/app/requests/__tests__/",
+    "test:a11y:rtl:components": "npm run test:a11y:rtl:new-request && npm run test:a11y:rtl:requests"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -43,6 +49,7 @@
     "jest-environment-jsdom": "^30.1.2",
     "msw": "^2.11.2",
     "playwright": "^1.55.1",
+    "cross-env": "^7.0.3",
     "tailwindcss": "^4",
     "typescript": "^5",
     "undici": "^6.21.3",
