--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
-    "test": "jest",
+    "test": "cross-env NODE_OPTIONS=--max-old-space-size=2048 jest --runInBand",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:accessibility": "node scripts/accessibility-audit.js",
